<resources>
    <string name="app_name">SmartHome</string>

    <string name="login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="device_info">Zigbee</string>

    <string name="air">新风</string>
    <string name="air_con_1">air_con_1</string>
    <string name="air_con_2">air_con_2</string>
    <string name="temperature">temperature</string>
    <string name="humidity">humidity</string>
    <string name="pm25">pm25</string>
    <string name="air_con">空调</string>


    <string name="back">Back</string>
    <string name="weather">室外天气</string>
</resources>
