<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_device_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context="linksprite.com.zigbeehouse.activity.DeviceInfoActivity">

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="19:01"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_weekday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_toRightOf="@+id/tv_time"
            android:text="星期二"
            android:textColor="@color/colorWhite"
            android:textSize="8sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_weekday"
            android:layout_marginStart="1dp"
            android:layout_toRightOf="@+id/tv_time"
            android:text="2017年01月01日"
            android:textColor="@color/colorWhite"
            android:textSize="8sp"
            android:id="@+id/tv_day"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:id="@+id/btn_back"
            android:clickable="true">

            <ImageView
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_marginEnd="5dp"
                android:src="@mipmap/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/back"
                android:textColor="@color/colorWhite"
                android:textSize="10sp" />
        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_bar"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:id="@+id/linear_air">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/circle_open"
                android:id="@+id/img_circle_air_con"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/air_con"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="24℃"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp"
                    android:id="@+id/tv_tem"/>
            </LinearLayout>
        </RelativeLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/close"
            android:layout_gravity="center"
            android:id="@+id/img_air_con_run"
            android:clickable="true"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/circle_open"
                android:id="@+id/img_circle_air"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/air"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:layout_gravity="center"/>

              <ImageView
                  android:layout_width="40dp"
                  android:layout_height="40dp"
                  android:src="@mipmap/air"/>
            </LinearLayout>
        </RelativeLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/close"
            android:layout_gravity="center"
            android:id="@+id/img_air_run"
            android:clickable="true"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/linear_air"
        android:layout_below="@+id/action_bar">

        <com.zhy.view.flowlayout.FlowLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/flowlayout"
            android:layout_centerInParent="true">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorBlack"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/weather"
                        android:layout_gravity="center" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weather"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:textColor="@color/colorWhite"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:background="@color/colorWhite"
                    android:layout_marginStart="10dp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_weater"
                        android:text="12-28℃"
                        android:textColor="@color/colorWhite"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_status"
                        android:text="晴转多云"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorBlack"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/tem"
                        android:layout_gravity="center" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:textColor="@color/colorWhite"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:background="@color/colorWhite"
                    android:layout_marginStart="10dp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_tem_1"
                        android:text="12-28℃"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorBlack"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/hum"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:textColor="@color/colorWhite"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:background="@color/colorWhite"
                    android:layout_marginStart="10dp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_hum"
                        android:text="12-28℃"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorBlack"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/tem_1"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="地暖温度"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:textColor="@color/colorWhite"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:background="@color/colorWhite"
                    android:layout_marginStart="10dp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_tem_2"
                        android:text="12-28℃"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorBlack"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/very_good"
                        android:layout_gravity="center"
                        android:id="@+id/img_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pm25"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:id="@+id/tv_name"
                        android:textColor="@color/colorWhite"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:background="@color/colorWhite"
                    android:layout_marginStart="10dp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_pm25"
                        android:text="12-28℃"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>
            </LinearLayout>
        </com.zhy.view.flowlayout.FlowLayout>

    </RelativeLayout>


</RelativeLayout>
